# DGSI-LAB

week-02/code/: pyproject.toml  server.py  simple-qwen3.py
week-02/gpt2-project/: .simple-qwen3.py.swp  gpt2_cli.py  main.py  pyproject.toml
week-04/: .gitignore  MANIFEST.md  QUICKSTART.md  README.md  STRUCTURE.md  main.py  pyproject.toml  test_fix.py  test_tables.py  test_tools.py
week-05/app/: db.py
week-05/app/api/: simulation.py
week-05/app/models/: order.py
week-05/app/schemas/: orders.py
week-05/app/services/: order_manager.py  production_engine.py
week-05/app/utils/: json_export.py
week-05/tests/: conftest.py  test_simulation_flow.py
week-05/ui/pages/: logs.py  state.py
week-06/manufacturer/: README.md
week-06/manufacturer/manufacturer/: requirements.txt
week-06/manufacturer/manufacturer/app/api/: dependencies.py
week-06/manufacturer/manufacturer/dashboard/: style.py
week-06/provider/: .gitignore  README.md  pyproject.toml  requirements.txt
week-06/provider/docs/: CLAUDE.md  PRD.md  STATE.md
week-06/provider/provider/app/: cli.py  db.py  main.py  seed.py
week-06/provider/provider/app/api/endpoints/: catalog.py  orders.py  simulation.py
week-06/provider/provider/app/models/: event.py  order.py  pricing_tier.py  product.py  sim_state.py  stock.py
week-06/provider/provider/app/services/: catalog_service.py  export_import.py  order_service.py
week-06/provider/seed_data/: seed-provider.json
week-07/: .gitignore  README.md  report.md
week-07/docs/: INTEGRATION.md  TESTING.md  retailer_integration_plan.md
week-07/manufacturer/: README.md  pyproject.toml  requirements.txt
week-07/manufacturer/app/: cli.py  main.py
week-07/manufacturer/app/api/endpoints/: catalog.py  day.py  orders.py
week-07/manufacturer/app/core/: config.py  database.py
week-07/manufacturer/app/models/: order.py  product.py
week-07/manufacturer/app/services/: order_service.py  seed.py  simulation_engine.py
week-07/manufacturer/sample_data/: default_production_plan.json
week-07/manufacturer/tests/test_services/: test_integration_v7.py
week-07/provider/: README.md  provider-cli  pyproject.toml  requirements.txt
week-07/provider/app/: cli.py
week-07/provider/app/core/: database.py
week-07/provider/app/services/: seed.py
week-07/provider/tests/: conftest.py
week-07/provider/tests/test_services/: test_provider_service.py
week-07/retailer/: README.md  pyproject.toml  report.md  requirements.txt
week-07/retailer/app/: __init__.py  cli.py  main.py
week-07/retailer/app/api/: __init__.py
week-07/retailer/app/api/endpoints/: __init__.py  catalog.py  day.py  orders.py  purchase.py
week-07/retailer/app/core/: __init__.py  config.py  database.py
week-07/retailer/app/models/: __init__.py  database.py  order.py  product.py  retail.py
week-07/retailer/app/services/: __init__.py  manufacturer_client.py  retailer_service.py
week-07/retailer/app/utils/: __init__.py  json_export.py
week-07/retailer/docs/: IMPLEMENTATION.md  PRD.md  TESTING.md
week-07/retailer/tests/: __init__.py  conftest.py
week-07/retailer/tests/test_api/: __init__.py  test_endpoints.py
week-07/retailer/tests/test_services/: __init__.py  test_business_logic.py  test_retailer_markup.py  test_retailer_service.py
week-07/scripts/: start_all.sh  test_output.txt  test_scenario.sh
(+8 files in other folders)
