[project]
name = "week-04-function-calling"
version = "0.1.0"
description = "Function calling assignment for Week 4 - DGSI"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.3.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
