[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "provider"
version = "1.0.0"
description = "Provider app - Parts supplier for 3D printer manufacturing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
provider-cli = "provider.app.cli:main"

[tool.setuptools]
packages = ["provider"]