[project]
name = "printer-factory-sim"
version = "0.1.0"
description = "3D Printer Production Simulator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "sqlalchemy>=2.0.49",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "typer>=0.12.0",
    "click<8.1.8",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.28",
    "streamlit>=1.57.0",
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
]

[project.scripts]
manufacturer-cli = "app.cli:app"

[tool.setuptools]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "coverage>=7.14.0",
    "ruff>=0.15.13",
    "mypy>=2.1.0",
]
