[project]
name = "dgsi-provider"
version = "0.1.0"
description = "DGSI Provider App - Week 6"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.9.0",
    "typer>=0.12.0",
    "click<8.1.8",
    "httpx>=0.27.0",
    "python-multipart>=0.0.17",
]

[project.scripts]
provider-cli = "app.cli:app"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]
